--- a/css/main.css
+++ b/css/main.css
@@ -51,6 +51,15 @@ body {
     color: white; 
 }
 
+p{
+	text-decoration: none;
+    font-family:'Raleway', sans-serif;
+    font-style: normal;
+    font-size:  12px;
+    font-weight: 100;
+    color:white;
+}
+
 a {
     text-decoration: none;
     font-family:'Raleway', sans-serif;
@@ -198,7 +207,7 @@ body {
 
 #menu {
 	position: absolute;
-	bottom: 2vh;
+	bottom: 4vh;
 	width: 100%;
 	text-align: center;
 }
@@ -211,12 +220,20 @@ body {
 	bottom:0px;
 }
 
+#infosMenu button {
+	opacity : 0.5;
+}
+
+#infosMenu button:hover {
+	opacity : 1;
+}
+
 #infosDeploy {
 	cursor: pointer;
 }
 
 #infosDeploy img {
-	height: 5vh;
+	height: 1vw;
 	width:auto;
 }
 
@@ -225,10 +242,8 @@ body {
 }
 
 #infosList li {
-	padding-bottom: 2vh;
-	padding-top: 2vh;
-	margin-top: 1vh;
-	margin-bottom: 1vh;
+	padding-bottom: 1vh;
+	padding-top: 1vh;
     -webkit-transform-origin: 50% 0%;
     -o-transform-origin: 50% 0%;
     transform-origin: 50% 0%;
@@ -237,45 +252,45 @@ body {
 #infosList #projet {
 	opacity:0;
 	transform:translateY(25px);
-    -webkit-transition: 0.2s linear 0.2s;
-    -o-transition: 0.2s linear 0.2s;
-    transition: 0.2s linear 0.2s;
+    -webkit-transition: 0.2s linear 0.6s;
+    -o-transition: 0.2s linear 0.6s;
+    transition: 0.2s linear 0.6s;
 }
 
 #infosList #equipe {
 	opacity:0;
 	transform:translateY(35px);
-    -webkit-transition: 0.2s linear 0.3s;
-    -o-transition: 0.2s linear 0.3s;
-    transition: 0.2s linear 0.3s;
-}
-
-#infosList #partenaires {
-	opacity:0;
-	transform:translateY(45px);
     -webkit-transition: 0.2s linear 0.4s;
     -o-transition: 0.2s linear 0.4s;
     transition: 0.2s linear 0.4s;
 }
 
+#infosList #partenaires {
+	opacity:0;
+	transform:translateY(45px);
+    -webkit-transition: 0.2s linear 0.2s;
+    -o-transition: 0.2s linear 0.2s;
+    transition: 0.2s linear 0.2s;
+}
+
 #infosMenu:hover #projet {
 	opacity:1;
-    transform:translateY(-25px);
+    transform:translateY(0px);
 	 -webkit-transition: 0.2s linear 0.2s;
     -o-transition: 0.2s linear 0.2s;
     transition: 0.2s linear 0.2s;
 }
 #infosMenu:hover #equipe {
 	opacity:1;
-    transform:translateY(-35px);
+    transform:translateY(0px);
 	 -webkit-transition: 0.2s linear 0.3s;
     -o-transition: 0.2s linear 0.3s;
     transition: 0.2s linear 0.3s;
 }
 #infosMenu:hover #partenaires {
 	opacity:1;
-    transform:translateY(-45px);
-	 -webkit-transition: 0.2s linear 0.4s;
+    transform:translateY(0px);
+	-webkit-transition: 0.2s linear 0.4s;
     -o-transition: 0.2s linear 0.4s;
     transition: 0.2s linear 0.4s;
 }
@@ -300,12 +315,39 @@ body {
 	right: 20px;
 }
 
+#controls ul {
+	opacity:0.5;
+	float: right;
+	-webkit-transition: 0.2s linear 0.4s;
+    -o-transition: 0.2s linear 0.4s;
+    transition: 0.2s linear 0.4s;
+}
+
+#controls ul:hover {
+	opacity:1;
+	-webkit-transition: 0.2s linear 0.4s;
+    -o-transition: 0.2s linear 0.4s;
+    transition: 0.2s linear 0.4s;
+}
+
 #controls li {
 	display: inline-block;
 	vertical-align: middle;
-	padding-left: 1vw;
+	padding-left:0.5vw;
 }
 
 #controls li img {
-	height: 5vh;
+	height: 1vw;
+}
+
+#controls ul p {
+	display: none;
+}
+
+#fullScreen:hover p {
+	display:inline;
+}
+
+#mute:hover p {
+	display: inline;
 }
