--- a/css/main.css
+++ b/css/main.css
@@ -4,6 +4,7 @@
 
 html, body {
 	height: 100%;
+	background-color: #1e1e28;
 	cursor: crosshair;
 }
 
@@ -77,7 +78,7 @@ h1 {
     font-style: normal;
     font-size: 4.2em;
     font-weight: normal;
-	text-align:center;
+	text-align:left;
 	padding-bottom: 30px;
     color: #B9A64B;
 }
@@ -106,60 +107,159 @@ body {
 /**********************************     ***************************************/
 /*****************************   CONTAINERS   *********************************/
 /**********************************     ***************************************/
-body {
 
-}
 
-#webGL-container {
-	z-index:0;
-}
+/*****************************   INTERFACE   *********************************/
 
-#trailer {
-	position: absolute;
-	width: 100%;
-	height: 100%;
-	text-align: center;
-	overflow:hidden;
-	z-index: 4;
-}
-#trailer video {
-    position: absolute;
-    z-index: 0;    
-	background: url(data/vid/trailer.mp4) no-repeat;
-    /*background-size: 100% 100%;*/
-    top: 50vh;
-	transform: translate(0, -50%);
-    left: 0px; /* fixed to left. Replace it by right if you want.*/
-    width: 100vw;
-    height: auto;
-}
-#trailer #skipTrailer {
-	color: white;
-	opacity: 0.5;
-	margin-top:90vh;
-}
-#trailer #skipTrailer:hover {
-	opacity: 1;
-}
-
-#logoMenu {
-	position: absolute;
-    margin-top: 2vh;
-    margin-left: 2vw;
-	z-index:3;
-}
-
-#background {
-	pointer-events: :none;
-	position: absolute;
+#interface {
+	position:absolute;
 	width:100%;
 	height:100%;
-	background-color: #1e1e28;
-	opacity:0.5;
-	z-index: 1;
+	overflow: hidden;
+	-webkit-transition: 1s linear 0.2s;
+    -o-transition: 1s linear 0.2s;
+    transition: 1s linear 0.2s;
+	z-index: 3;
 }
 
-#centralInfo {
+/*****************************   Basic Interface   ******************************/
+
+#interface #basicInterface {
+	position:absolute;
+	width:100%;
+	height:100%;
+	z-index:1;
+}
+#interface #basicInterface #logo {
+	position:absolute;
+    margin-top: 2vh;
+    margin-left: 2vw;
+}
+#interface #basicInterface #infosMenu {
+	position:absolute;
+	padding:0px;
+	margin:0;
+	left:2vw;
+	bottom:4vh;
+}
+#interface #basicInterface #infosMenu button {
+	margin-left:50%;
+	transform:translateX(-50%);
+	opacity : 0.3;
+}
+#interface #basicInterface #infosMenu button:hover {
+	opacity : 1;
+}
+#interface #basicInterface #infosMenu #infosList {
+	padding-bottom: 1vh;
+	padding-top: 1vh;
+    -webkit-transform-origin: 50% 0%;
+    -o-transform-origin: 50% 0%;
+    transform-origin: 50% 0%;
+}
+
+#interface #basicInterface #infosMenu #infosList #projet {
+	opacity: 0;
+	transform: translateY(25px);
+    -webkit-transition: 0.2s linear 0.6s;
+    -o-transition: 0.2s linear 0.6s;
+    transition: 0.2s linear 0.6s;
+}
+
+#interface #basicInterface #infosMenu #infosList #equipe {
+	opacity: 0;
+	transform: translateY(35px);
+    -webkit-transition: 0.2s linear 0.4s;
+    -o-transition: 0.2s linear 0.4s;
+    transition: 0.2s linear 0.4s;
+}
+
+#interface #basicInterface #infosMenu #infosList #partenaires {
+	opacity: 0;
+	transform: translateY(45px);
+    -webkit-transition: 0.2s linear 0.2s;
+    -o-transition: 0.2s linear 0.2s;
+    transition: 0.2s linear 0.2s;
+}
+
+#interface #basicInterface #infosMenu:hover #infosList #projet {
+	opacity: 0.7;
+    transform: translateY(0px);
+	 -webkit-transition: 0.2s linear 0.2s;
+    -o-transition: 0.2s linear 0.2s;
+    transition: 0.2s linear 0.2s;
+}
+#interface #basicInterface #infosMenu:hover #infosList #equipe {
+	opacity: 0.7;
+    transform: translateY(0px);
+	 -webkit-transition: 0.2s linear 0.3s;
+    -o-transition: 0.2s linear 0.3s;
+    transition: 0.2s linear 0.3s;
+}
+#interface #basicInterface #infosMenu:hover #infosList #partenaires {
+	opacity: 0.7;
+    transform:translateY(0px);
+	-webkit-transition: 0.2s linear 0.4s;
+    -o-transition: 0.2s linear 0.4s;
+    transition: 0.2s linear 0.4s;
+}
+
+#interface #basicInterface #controls {
+	position:absolute;
+	bottom:4vh;
+	right: 2vw;
+}
+#interface #basicInterface #controls ul {
+	opacity:0.3;
+	float: right;
+	-webkit-transition: 0.2s linear 0.0s;
+    -o-transition: 0.2s linear 0.0s;
+    transition: 0.2s linear 0.0s;
+}
+#interface #basicInterface #controls ul:hover {
+	opacity:0.7;
+}
+#interface #basicInterface #controls li {
+	display:inline-block;
+	vertical-align:middle;
+	padding-left:1vw;
+}
+#interface #basicInterface #controls ul p {
+	display:none;
+}
+#interface #basicInterface #controls ul:hover p {
+	display:inline;
+}
+#interface #basicInterface #controls ul img {
+	/*width:2vw;*/
+}
+
+/***************************   interface d'accueil   *****************************/
+
+#interface #accueil{
+	display: none;
+	position:absolute;
+	width:100%;
+	height:100%;
+	z-index:1
+}
+#interface #accueil #startButton {
+	position: absolute;
+	bottom: 4vh;
+	margin-left: 50vw;
+	transform: translate(-50%, 0);
+	color: rgba(255,255,255,0.75);
+	outline: 1px solid rgba(255,255,255,0.75);
+	padding: 25px 50px;
+}
+#interface #accueil #startButton:hover {
+	background-color: rgba(255,255,255,0.5);
+}
+#interface #accueil #startButton:active {
+	color: #000000;
+	background-color: rgba(255,255,255,0.75);
+}
+#interface #accueil #title{
 	position : absolute;
     text-align: center;
 	margin-left: 50vw;
@@ -169,71 +269,70 @@ body {
     -o-transition: 0.2s linear 0.2s;
     transition: 0.2s linear 0.2s;
     transform: translate(-50%, -50%);
-	z-index: 3;
 }
-
-#projetPage{
+#interface #accueil #title h1{
+	text-align: center;
+}
+#interface #accueil #projetInfos{
 	position : absolute;
-	width:50vw;
-	margin-left: 50vw;
+	margin-left:20vw;
+	margin-right:20vw;
     margin-top: 50vh;
-    transform: translate(-50%, -50%);
+    transform: translate(0, -50%);
+	opacity: 0;
+	-webkit-transition: 0.2s linear 0.4s;
+    -o-transition: 0.2s linear 0.4s;
+    transition: 0.2s linear 0.4s;
+}
+#interface #accueil #equipeInfos{
+	position : absolute;
+	overflow: hidden;
+	margin-left:20vw;
+	margin-right:20vw;
+    margin-top: 50vh;
+	height: 60vh;
+    transform: translate(0, -50%);
 	opacity:0;
 	-webkit-transition: 0.2s linear 0.4s;
     -o-transition: 0.2s linear 0.4s;
     transition: 0.2s linear 0.4s;
-	z-index:3;
 }
-
-#equipePage{
-	position : absolute;
-	overflow:hidden;
-	text-align:center;
-	width:50vw;
-	margin-left: 50vw;
-    margin-top: 50vh;
-    transform: translate(-50%, -50%);
-	opacity:0;
-	-webkit-transition: 0.2s linear 0.4s;
-    -o-transition: 0.2s linear 0.4s;
-    transition: 0.2s linear 0.4s;
-	z-index: 3;
+#interface #accueil #equipeInfos #equipeList{
+	height: 30vh;
+	width: 700%;
+	transform:translate(0,0);
 }
-
 .equipeListElement {
 	width: 15vw;
-	text-align: center;
 	display:inline-block;
-	vertical-align:top;
+	text-align: center;
+	overflow: hidden;
+	vertical-align: top;
 	padding: 7px;
 }
-
 .equipeListElement img {
 	width: 10vw;
 }
 
-
-#partenairesPage{
+#interface #accueil #partenairesInfos{
 	position : absolute;
 	overflow: hidden;
-	width:50vw;
-	margin-left: 50vw;
+	margin-left:20vw;
+	margin-right:20vw;
     margin-top: 50vh;
-    transform: translate(-50%, -50%);
+	height: 60vh;
+    transform: translate(0, -50%);
 	opacity:0;
 	-webkit-transition: 0.2s linear 0.4s;
     -o-transition: 0.2s linear 0.4s;
     transition: 0.2s linear 0.4s;
-	z-index:3;
 }
-
-#partenairesList {
+#interface #accueil #partenairesInfos #partenairesList {
 	height: 20vh;
 	width:700%;
 	transform:translate(0%,0);
 }
-
-.partenairesListElement {
+#interface #accueil #partenairesInfos #partenairesList .partenairesListElement {
 	width:15vw;
 	display:inline-block;
 	text-align: center;
@@ -241,12 +340,21 @@ body {
 	vertical-align:top;
 	padding: 7px;
 }
-
-.partenairesListElement img {
+#interface #accueil #partenairesInfos #partenairesList .partenairesListElement img {
 	width:10vw;
 }
 
-#leftPanel {
+/*****************************   Interface 3D  *********************************/
+
+#interface3D {
+	display: none;
+	position:absolute;
+	width:100%;
+	height:100%;
+	z-index:1
+}
+
+#interface3D #leftPanel {
 	position : absolute;
 	top: 5vh;
 	width:20vw;
@@ -254,158 +362,16 @@ body {
 	padding: 2vw;
 	opacity:0;
 	display:none;
-	z-index:3;
 	background-color: #1E1E28;
 	-webkit-transition: 0.1s linear 0.2s;
     -o-transition: 0.1s linear 0.2s;
     transition: 0.1s linear 0.2s;
 }
-#leftPanel p {
+#interface3D#leftPanel p {
 	display: none;
 }
 
-#menu {
-	position: absolute;
-	bottom: 4vh;
-	width: 100%;
-	text-align: center;
-	z-index: 3;
-}
-
-#infosMenu {
-	position:absolute;
-	padding:0px;
-	margin:0;
-	left:2vw;
-	bottom:0px;
-}
-
-#infosMenu button {
-	opacity : 0.5;
-}
-
-#infosMenu button:hover {
-	opacity : 1;
-}
-
-#infosDeploy img {
-	height: 1vw;
-	width:auto;
-}
-
-#infosList li {
-	padding-bottom: 1vh;
-	padding-top: 1vh;
-    -webkit-transform-origin: 50% 0%;
-    -o-transform-origin: 50% 0%;
-    transform-origin: 50% 0%;
-}
-
-#infosList #projet {
-	opacity:0;
-	transform:translateY(25px);
-    -webkit-transition: 0.2s linear 0.6s;
-    -o-transition: 0.2s linear 0.6s;
-    transition: 0.2s linear 0.6s;
-}
-
-#infosList #equipe {
-	opacity:0;
-	transform:translateY(35px);
-    -webkit-transition: 0.2s linear 0.4s;
-    -o-transition: 0.2s linear 0.4s;
-    transition: 0.2s linear 0.4s;
-}
-
-#infosList #partenaires {
-	opacity:0;
-	transform:translateY(45px);
-    -webkit-transition: 0.2s linear 0.2s;
-    -o-transition: 0.2s linear 0.2s;
-    transition: 0.2s linear 0.2s;
-}
-
-#infosMenu:hover #projet {
-	opacity:1;
-    transform:translateY(0px);
-	 -webkit-transition: 0.2s linear 0.2s;
-    -o-transition: 0.2s linear 0.2s;
-    transition: 0.2s linear 0.2s;
-}
-#infosMenu:hover #equipe {
-	opacity:1;
-    transform:translateY(0px);
-	 -webkit-transition: 0.2s linear 0.3s;
-    -o-transition: 0.2s linear 0.3s;
-    transition: 0.2s linear 0.3s;
-}
-#infosMenu:hover #partenaires {
-	opacity:1;
-    transform:translateY(0px);
-	-webkit-transition: 0.2s linear 0.4s;
-    -o-transition: 0.2s linear 0.4s;
-    transition: 0.2s linear 0.4s;
-}
-
-#startButton {
-	color: rgba(255,255,255,0.75);
-	outline: 1px solid rgba(255,255,255,0.75);
-	padding: 25px 50px;
-}
-
-#startButton:hover {
-	background-color: rgba(255,255,255,0.5);
-}
-
-#startButton:active {
-	color: #000000;
-	background-color: rgba(255,255,255,0.75);
-}
-
-#controls {
-	position:absolute;
-	bottom:0px;
-	right: 20px;
-}
-
-#controls ul {
-	opacity:0.5;
-	float: right;
-	-webkit-transition: 0.2s linear 0.0s;
-    -o-transition: 0.2s linear 0.0s;
-    transition: 0.2s linear 0.0s;
-}
-
-#controls ul:hover {
-	opacity:1;
-	-webkit-transition: 0.2s linear 0.0s;
-    -o-transition: 0.2s linear 0.0s;
-    transition: 0.2s linear 0.0s;
-}
-
-#controls li {
-	display: inline-block;
-	vertical-align: middle;
-	padding-left:0.5vw;
-}
-
-#controls li img {
-	height: 1vw;
-}
-
-#controls ul p {
-	display: none;
-}
-
-#fullScreen:hover p {
-	display:inline;
-}
-
-#mute:hover p {
-	display: inline;
-}
-
-#plan {
+#interface3D#plan {
 	position:absolute;
 	display : none;
 	width:100%;
@@ -415,19 +381,75 @@ body {
 	z-index: 1;
 }
 
-#plan svg {
-	position: absolute;
+#interface3D #plan #planBG {
+	position:absolute;
 	width:100%;
 	height:100%;
 	top:0;
+	opacity:0.3;
 	left: 50%;
 	transform: translate(-50%, 0);
 	-webkit-transition: 0.2s linear 0.0s;
     -o-transition: 0.2s linear 0.0s;
     transition: 0.2s linear 0.0s;
 }
-#plan img {
+
+#interface3D #plan #visit {
 	width:100%;
 	height:100%;
-	opacity: 0.3;
+	opacity: 1;
+}
+
+/*****************************   TRAILER   *********************************/
+
+#trailer {
+	position: absolute;
+	width: 100%;
+	height: 100%;
+	text-align: center;
+	overflow: hidden;
+	z-index: 2;
+	-webkit-transition: 1s linear 0s;
+    -o-transition: 1s linear 0s;
+    transition: 1s linear 0s;
+}
+#trailer video {
+    position: absolute;  
+    top: 50vh;
+	transform: translate(0, -50%);
+    left: 0px;
+    width: 100vw;
+    height: auto;
+	z-index: 0;
+}
+#trailer #skipTrailer {
+	color: white;
+	opacity: .3;
+	margin-top:90vh;
+	z-index: 1;
+}
+#trailer #skipTrailer:hover {
+	opacity:.7;
+}
+
+/*****************************  BACKGROUND  *********************************/
+
+#background {
+	position: absolute;
+	display: inline;
+	width:100%;
+	height:100%;
+	background-color: #1e1e28;
+	opacity:0.9;
+	z-index: 0;
+	-webkit-transition: 1s linear 0s;
+    -o-transition: 1s linear 0s;
+    transition: 1s linear 0s;
+}
+
+/*****************************   WEBGL   *********************************/
+
+#webGL-container {
+	display:none;
+	z-index:1;
 }
