--- a/css/style.css
+++ b/css/style.css
@@ -545,12 +545,9 @@ wheelnContros {
 	position: absolute;
 	display: none;
 	left:50%;
-	bottom:2vh;
-	transform: translate(-50%,0);
-	width:320px;
-	height:320px;
+	bottom:0;
+	transform: translate(-50%,50%);
 	border-radius: 160px;
-	margin: 50px auto;
 	cursor: default;
 	user-drag: none; 
 	user-select: none;
@@ -564,6 +561,7 @@ wheelnContros {
 	right:50%;
 	top:50%;
 	transform: translate(50%, -50%);
+	z-index: 2;
 }
 #fillImg {
 	width:100%;
@@ -578,6 +576,7 @@ wheelnContros {
 	width: 15px;
 	border-radius: 7.5px;
 	cursor: pointer;
+	z-index:3;
 }
 
 /*****************************   TRAILER   *********************************/
