Vidéo can be added on the interestPoint.json

--- a/css/style.css
+++ b/css/style.css
@@ -543,7 +543,7 @@ wheelnContros {
 	display:none;
 }
 #leftPanel:hover .interestPointVideo {
-	display:inline !important;
+	display:inline;
 }
 
 #hoverPartNameContainer {
